--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -97,8 +97,10 @@
     (package-refresh-contents)
     (package-install 'use-package))
 
-  (require 'use-package)
+  (eval-at-compile (require 'use-package))
+
   (setq use-package-always-ensure t)
+
   (use-package auto-package-update
     :config
     (setq auto-package-update-delete-old-versions t)
