--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -55,202 +55,214 @@
 #+END_SRC
 
 #+BEGIN_SRC conf :tangle "~/.gitignore"
-### Clangd ###
-# -*- mode: gitignore; -*-
-.clangd
-source/_posts/**/*.png
-source/_drafts/**/*.png
+  ### Clangd ###
+  # -*- mode: gitignore; -*-
+  .clangd
+  source/_posts/**/*.png
+  source/_drafts/**/*.png
 
 
-### Emacs ###
-# -*- mode: gitignore; -*-
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
+  ### Emacs ###
+  # -*- mode: gitignore; -*-
+  ,*~
+  \#*\#
+  /.emacs.desktop
+  /.emacs.desktop.lock
+  ,*.elc
+  auto-save-list
+  tramp
+  .\#*
 
-# Org-mode
-.org-id-locations
-*_archive
+  # Org-mode
+  .org-id-locations
+  ,*_archive
 
-# flymake-mode
-*_flymake.*
+  # flymake-mode
+  ,*_flymake.*
 
-# eshell files
-/eshell/history
-/eshell/lastdir
+  # eshell files
+  /eshell/history
+  /eshell/lastdir
 
-# elpa packages
-/elpa/
+  # elpa packages
+  /elpa/
 
-# reftex files
-*.rel
+  # reftex files
+  ,*.rel
 
-# AUCTeX auto folder
-/auto/
+  # AUCTeX auto folder
+  /auto/
 
-# cask packages
-.cask/
-dist/
+  # cask packages
+  .cask/
+  dist/
 
-# Flycheck
-flycheck_*.el
+  # Flycheck
+  flycheck_*.el
 
-# server auth directory
-/server/
+  # server auth directory
+  /server/
 
-# projectiles files
-.projectile
+  # projectiles files
+  .projectile
 
-# directory configuration
-.dir-locals.el
+  # directory configuration
+  .dir-locals.el
 
-# network security
-/network-security.data
-
-
-# End of https://www.gitignore.io/api/emacs
-
-# Created by https://www.gitignore.io/api/vim
-# Edit at https://www.gitignore.io/?templates=vim
-
-### Vim ###
-# Swap
-[._]*.s[a-v][a-z]
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
-
-# Session
-Session.vim
-
-# Temporary
-.netrwhist
-*~
-# Auto-generated tag files
-tags
-# Persistent undo
-[._]*.un~
-
-# End of https://www.gitignore.io/api/vim
-
-# Created by https://www.gitignore.io/api/cmake
-# Edit at https://www.gitignore.io/?templates=cmake
-
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-
-### CMake Patch ###
-# External projects
-*-prefix/
-
-# End of https://www.gitignore.io/api/cmake
+  # network security
+  /network-security.data
 
 
+  # End of https://www.gitignore.io/api/emacs
 
-# Created by https://www.gitignore.io/api/intellij+all
-# Edit at https://www.gitignore.io/?templates=intellij+all
+  # Created by https://www.gitignore.io/api/vim
+  # Edit at https://www.gitignore.io/?templates=vim
 
-### Intellij+all ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+  ### Vim ###
+  # Swap
+  [._]*.s[a-v][a-z]
+  [._]*.sw[a-p]
+  [._]s[a-rt-v][a-z]
+  [._]ss[a-gi-z]
+  [._]sw[a-p]
 
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+  # Session
+  Session.vim
 
-# Generated files
-.idea/**/contentModel.xml
+  # Temporary
+  .netrwhist
+  ,*~
+  # Auto-generated tag files
+  tags
+  # Persistent undo
+  [._]*.un~
 
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
+  # End of https://www.gitignore.io/api/vim
 
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+  # Created by https://www.gitignore.io/api/cmake
+  # Edit at https://www.gitignore.io/?templates=cmake
 
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
 
-# CMake
-cmake-build-*/
+  # Created by https://www.gitignore.io/api/intellij+all
+  # Edit at https://www.gitignore.io/?templates=intellij+all
 
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+  ### Intellij+all ###
+  # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+  # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# File-based project format
-*.iws
+  # User-specific stuff
+  .idea/**/workspace.xml
+  .idea/**/tasks.xml
+  .idea/**/usage.statistics.xml
+  .idea/**/dictionaries
+  .idea/**/shelf
 
-# IntelliJ
-out/
+  # Generated files
+  .idea/**/contentModel.xml
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+  # Sensitive or high-churn files
+  .idea/**/dataSources/
+  .idea/**/dataSources.ids
+  .idea/**/dataSources.local.xml
+  .idea/**/sqlDataSources.xml
+  .idea/**/dynamic.xml
+  .idea/**/uiDesigner.xml
+  .idea/**/dbnavigator.xml
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+  # Gradle
+  .idea/**/gradle.xml
+  .idea/**/libraries
 
-# Cursive Clojure plugin
-.idea/replstate.xml
+  # Gradle and Maven with auto-import
+  # When using Gradle or Maven with auto-import, you should exclude module files,
+  # since they will be recreated, and may cause churn.  Uncomment if using
+  # auto-import.
+  # .idea/modules.xml
+  # .idea/*.iml
+  # .idea/modules
+  # *.iml
+  # *.ipr
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+  # CMake
+  cmake-build-*/
 
-# Editor-based Rest Client
-.idea/httpRequests
+  # Mongo Explorer plugin
+  .idea/**/mongoSettings.xml
 
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+  # File-based project format
+  ,*.iws
 
-### Intellij+all Patch ###
-# Ignores the whole .idea folder and all .iml files
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
-.idea/
+  # IntelliJ
+  out/
 
-# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+  # mpeltonen/sbt-idea plugin
+  .idea_modules/
 
-*.iml
-modules.xml
-.idea/misc.xml
-*.ipr
+  # JIRA plugin
+  atlassian-ide-plugin.xml
 
-# Sonarlint plugin
-.idea/sonarlint
+  # Cursive Clojure plugin
+  .idea/replstate.xml
 
-# End of https://www.gitignore.io/api/intellij+all
+  # Crashlytics plugin (for Android Studio and IntelliJ)
+  com_crashlytics_export_strings.xml
+  crashlytics.properties
+  crashlytics-build.properties
+  fabric.properties
 
+  # Editor-based Rest Client
+  .idea/httpRequests
+
+  # Android studio 3.1+ serialized cache file
+  .idea/caches/build_file_checksums.ser
+
+  ### Intellij+all Patch ###
+  # Ignores the whole .idea folder and all .iml files
+  # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+  .idea/
+
+  # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+  ,*.iml
+  modules.xml
+  .idea/misc.xml
+  ,*.ipr
+
+  # Sonarlint plugin
+  .idea/sonarlint
+
+  # End of https://www.gitignore.io/api/intellij+all
+
+  # Created by https://www.gitignore.io/api/macos
+  # Edit at https://www.gitignore.io/?templates=macos
+
+  ### macOS ###
+  # General
+  .DS_Store
+  .AppleDouble
+  .LSOverride
+
+  # Icon must end with two \r
+  Icon
+
+  # Thumbnails
+  ._*
+
+  # Files that might appear in the root of a volume
+  .DocumentRevisions-V100
+  .fseventsd
+  .Spotlight-V100
+  .TemporaryItems
+  .Trashes
+  .VolumeIcon.icns
+  .com.apple.timemachine.donotpresent
+
+  # Directories potentially created on remote AFP share
+  .AppleDB
+  .AppleDesktop
+  Network Trash Folder
+  Temporary Items
+  .apdisk
+
+  # End of https://www.gitignore.io/api/macos
 #+END_SRC
