feat: add make brew

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -105,6 +105,7 @@ brew 'nmap'
 brew 'axel' # multiple thread downloader
 brew 'iperf'
 brew 'gradle'
+brew 'make'
 brew 'cmake'
 brew 'tig'
 brew 'rg'
