--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -18,6 +18,7 @@
   # add brew path
   export PATH="/usr/local/bin:/usr/local/sbin:/usr/bin:/bin:/usr/sbin:/sbin:$PATH"
   export PATH="$PATH:$GOPATH/bin"
+  export PATH="/usr/local/opt/make/libexec/gnubin:$PATH"
   export PATH="/usr/local/opt/gettext/bin:$PATH"
   export PATH="/workspace/envs/flutter/bin:$PATH"
   export PATH="/usr/local/opt/binutils/bin:$PATH"
