--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -31,6 +31,7 @@
     :config
     (global-company-mode)
     (use-package company-posframe
+      :diminish company-posframe
       :hook
       (company-mode . company-posframe-mode))
     (use-package company-flx
@@ -38,7 +39,7 @@
       :config
       (company-flx-mode +1))
     (use-package company-box
-      :diminish
+      :diminish company-box
       :hook (company-mode . company-box-mode)
       :config
       (setq company-box-backends-colors nil)
