--- a/hammers/emacs/chinese.org
+++ b/hammers/emacs/chinese.org
@@ -27,7 +27,7 @@
 #+BEGIN_SRC elisp :eval never :exports code
   (use-package posframe)
   (use-package pyim
-    :diminish pyim-isearch
+    :diminish pyim-isearch-mode
     :after posframe
     :config
     ;; 激活 basedict 拼音词库，五笔用户请继续阅读 README
@@ -72,7 +72,7 @@
      :map pyim-mode-map
      ("C-n" . pyim-page-next-page)
      ("C-p" . pyim-page-previous-page)
-    )
+     )
     :hook 
     ((emacs-startup . pyim-restart)))
 #+END_SRC
